--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav {
+  background-color: #3a5a40;
+  margin-top: -16px;
+  /* height: 200%; */
+  padding: 2%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
-
-.App-link {
-  color: #61dafb;
+ul {
+  display: flex;
+  flex-direction: row;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+li {
+  margin-right: 2%;
+  list-style-type: none;
+  padding: 5px;
+}
+li a {
+  text-decoration: none;
+  color: white;
+  font-size: larger;
+  padding: 5px;
+}
+a:hover {
+  background-color: #dad7cd;
+  border-radius: 5px;
+  color: black;
+}
+@media screen and (max-width: 780px) {
+  .title {
+    font-size: medium;
   }
 }
